crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_112_NTDEC_Asder_Chik_Bik_Ji_Jin_Saam_Gwok_Ji_CN_20_Asder.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
assertion_line: 673
expression: text
---
rom=mapper-112-NTDEC-Asder/Chik Bik Ji Jin - Saam Gwok Ji (CN-20) (Asder) [!].nes
rom_sha256=c9200470e3232670dab11a42368d73549414ff9d50fe41827094d936cacddcf2
frames=1141
fb_bytes=245760
cycles=33949782
audio_samples=836505
audio_fnv1a64=92b7c3cfc2922474
checkpoint f900 fb_fnv1a64=d21270e840062ee0
checkpoint f1100 fb_fnv1a64=5e41b799952fcfa7
