crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_112_NTDEC_Asder_Fighting_Hero_III_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-112-NTDEC-Asder/Fighting Hero III (Unl) [!].nes
rom_sha256=bace07ffe352f9390df4938db70d6d777f4bd46ff1af8ad6b1d07cae925d7f49
frames=1141
fb_bytes=245760
cycles=33949960
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
