crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_112_NTDEC_Asder_Master_Shooter_CN_26_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-112-NTDEC-Asder/Master Shooter (CN-26) (Unl) [!].nes
rom_sha256=ad0a43e5cc95b082e01da991b695d80bd6b712534abff140e61ad11dd274e9b1
frames=1141
fb_bytes=245760
cycles=33949777
audio_samples=836505
audio_fnv1a64=5b175ea00090af8a
checkpoint f900 fb_fnv1a64=1eaad4560543f35d
checkpoint f1100 fb_fnv1a64=1eaad4560543f35d
