crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_113_NINA006_113_Funblaster_Pak_Australia_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-113-NINA006-113/Funblaster Pak (Australia) (Unl).zip
rom_sha256=e9fafcc88ce7da7417132ce9921924e63528b20687c58fd9748981c99edbbe5b
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=edd4459c13156daf
checkpoint f900 fb_fnv1a64=a07ca20426264951
checkpoint f1100 fb_fnv1a64=a07ca20426264951
