crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_113_NINA006_113_HES_6_in_1_HES_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-113-NINA006-113/HES 6-in-1 (HES).zip
rom_sha256=a697a25dbafe70a320869d9646b4fafae833d2e793de25592329ac7a0f124079
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=aaeeba4e5494e36c
checkpoint f900 fb_fnv1a64=012de60a3cacd864
checkpoint f1100 fb_fnv1a64=81dacd5ba3d5991f
