crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_113_NINA006_113_Total_Funpak_Australia_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-113-NINA006-113/Total Funpak (Australia) (Unl).zip
rom_sha256=5d97e0098ab2bbde578babeabe9baafcb6a383ac0ef5e21fd6bd4e25ccd2e5c0
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=53bb6aa89ec8a12f
checkpoint f900 fb_fnv1a64=2f314807b97c092e
checkpoint f1100 fb_fnv1a64=44129fd97553f159
